[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-mcts"
version = "0.1.0"
description = "Monte Carlo Tree Search integration for LangChain"
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.1.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/tu-usuario/langchain-mcts"
Repository = "https://github.com/tu-usuario/langchain-mcts"
Documentation = "https://langchain-mcts.readthedocs.io/"